@@ -1,15 +1,0 @@
-#  This file is part of systemd.
-#
-#  systemd is free software; you can redistribute it and/or modify it
-#  under the terms of the GNU Lesser General Public License as published by
-#  the Free Software Foundation; either version 2.1 of the License, or
-#  (at your option) any later version.
-
-[Unit]
-Description=systemd busname unit
-Documentation=man:systemd(1)
-Documentation=http://www.freedesktop.org/wiki/Software/systemd
-
-[BusName]
-Activating=no
-AllowWorld=talk
